<resources>
    <string name="ps_ensure">确定</string>
    <string name="ps_ensure_count">确定(%1$d/%2$d)</string>
    <string name="ps_type_all">图片和视频</string>
    <string name="ps_video_all">所有视频</string>
    <string name="ps_image_all">所有图片</string>
    <string name="ps_max_count">最多选择%1$d个文件</string>
    <string name="ps_preview_title_count">%1$d/%2$d</string>
    <string name="ps_choose">选择</string>
    <string name="ps_preview">预览</string>
    <string name="ps_preview_count">预览(%1$d)</string>
    <string name="ps_original_image">原图</string>
    <string name="ps_curr_week">本周</string>
    <string name="ps_curr_month">本月</string>
    <string name="ps_not_found_video_player">没有找到视频播放器</string>
    <string name="ps_edit_over">完成</string>
    <string name="ps_edit">编辑</string>
    <string name="ps_edit_cancel">取消</string>
    <string name="ps_edit_delete_tips">拖到此处可删除</string>
    <string name="ps_edit_release_delete_tips">松手即可删除</string>
    <string name="ps_resize_over">确定</string>
</resources>
