<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ps_layout_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/ps_media_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/ps_layout_bottom"
        android:layout_below="@id/ps_layout_header"
        android:background="?listBg"
        android:overScrollMode="never" />

    <RelativeLayout
        android:id="@+id/ps_layout_bottom"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_56"
        android:layout_alignParentBottom="true"
        android:background="?bottomBg">

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_0_5"
            android:background="?listBg" />

        <TextView
            android:id="@+id/ps_tv_preview"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:enabled="false"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/dp_12"
            android:paddingRight="@dimen/dp_12"
            android:text="@string/ps_preview"
            android:textColor="?bottomTextColor"
            android:textSize="@dimen/sp_14" />

        <TextView
            android:id="@+id/ps_tv_original_image"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:drawableLeft="@drawable/ps_ic_radio_transparent"
            android:drawablePadding="@dimen/dp_8"
            android:gravity="center_vertical"
            android:paddingRight="@dimen/dp_12"
            android:text="@string/ps_original_image"
            android:textColor="?bottomTextColor"
            android:textSize="@dimen/sp_14" />

    </RelativeLayout>

    <FrameLayout
        android:id="@+id/ps_layout_media_folder"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/dp_36"
        android:visibility="gone">

        <net.arvin.selector.uis.widgets.FolderRecyclerView
            android:id="@+id/ps_media_folder_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:overScrollMode="never"
            android:paddingTop="@dimen/dp_12" />

    </FrameLayout>

    <RelativeLayout
        android:id="@+id/ps_layout_header"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_48"
        android:background="?colorPrimary"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ps_img_close"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/dp_12"
            android:paddingRight="@dimen/dp_12"
            android:src="@drawable/ps_ic_close" />

        <LinearLayout
            android:id="@+id/ps_layout_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/ps_img_close"
            android:background="?titleBg"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/dp_12"
            android:paddingTop="@dimen/dp_4"
            android:paddingRight="@dimen/dp_6"
            android:paddingBottom="@dimen/dp_4">

            <TextView
                android:id="@+id/ps_tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ps_type_all"
                android:textColor="?titleColor"
                android:textSize="@dimen/sp_16" />

            <ImageView
                android:id="@+id/ps_img_title_arrow"
                android:layout_width="@dimen/dp_20"
                android:layout_height="@dimen/dp_20"
                android:layout_marginLeft="@dimen/dp_8"
                android:src="@drawable/ps_ic_title_arrow" />

        </LinearLayout>

        <TextView
            android:id="@+id/ps_btn_ensure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/dp_12"
            android:background="?sendBg"
            android:enabled="false"
            android:paddingLeft="@dimen/dp_16"
            android:paddingTop="@dimen/dp_6"
            android:paddingRight="@dimen/dp_16"
            android:paddingBottom="@dimen/dp_6"
            android:text="@string/ps_ensure"
            android:textColor="@color/ps_send_color"
            android:textSize="@dimen/sp_14" />

    </RelativeLayout>

    <TextView
        android:id="@+id/ps_tv_use_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ps_layout_header"
        android:alpha="0"
        android:background="#88000000"
        android:gravity="left"
        android:paddingLeft="@dimen/dp_12"
        android:visibility="gone"
        android:paddingTop="@dimen/dp_4"
        android:paddingBottom="@dimen/dp_4"
        android:textColor="@android:color/white"
        android:textSize="@dimen/sp_12" />

</RelativeLayout>